force-app/main/default/objects/Review_Decision__c/Review_Decision__c.object-meta.xml
<CustomObject>
    <label>Review &amp; Decision</label>
    <nameField>
        <displayFormat>RV-{0000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews &amp; Decisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>