force-app/main/default/objects/Review_Decision__c/fields/Decision_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Decision_Outcome__c</fullName>
    <label>Decision Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continue as Planned</fullName>
            </value>
            <value>
                <fullName>Adjust Scope</fullName>
            </value>
            <value>
                <fullName>Pause</fullName>
            </value>
            <value>
                <fullName>Close Initiative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>