force-app/main/default/objects/Review_Decision__c/fields/Key_Observations__c.field-meta.xml
<CustomField>
    <fullName>Key_Observations__c</fullName>
    <label>Key Observations</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>