force-app/main/default/objects/Review_Decision__c/fields/Mobility_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Initiative__c</fullName>
    <label>Mobility Initiative</label>
    <referenceTo>Mobility_Initiative__c</referenceTo>
    <relationshipLabel>Reviews &amp; Decisions</relationshipLabel>
    <relationshipName>Reviews_Decisions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>