force-app/main/default/objects/Review_Decision__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <label>Review Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Review</fullName>
            </value>
            <value>
                <fullName>Quarterly Review</fullName>
            </value>
            <value>
                <fullName>Annual Review</fullName>
            </value>
            <value>
                <fullName>Ad-hoc Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>