force-app/main/default/objects/Review_Decision__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Review_Type__c</columns>
    <columns>Decision_Outcome__c</columns>
    <columns>Mobility_Initiative__c</columns>
    <columns>Reviewed_By__c</columns>
    <columns>Review_Date__c</columns>
    <columns>Key_Observations__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>